# TxCloud

./: CMakeLists.txt  README.md  generate.py  ls.c  solution.c  solution.py  Восстание Декабристов.txt  Дела.ods
Labs/AiSD/: CMakeLists.txt  a.out
Labs/AiSD/1_Recursion/: Larin_Anton_AiSD_21_1.doc  a.out
Labs/AiSD/2_AlA/: Larin_Anton_AiSD_21_2.doc  dsd  Задания 2(1).docx
Labs/AiSD/2_AlA/Src/: CMakeLists.txt  dsd.cpp  l_impl_.cpp  l_mod1_.cpp
Labs/AiSD/2_AlA/Можно использовать во 2-ой работе(1)/2/: a.out  l_intrfc_.h.gch
Labs/AiSD/2_IerarchList/: .~lock.Larin_Anton_AiSD_21_2.doc#
Labs/AiSD/2_IerarchList/Src/: l_impl_.cpp  l_mod1_.cpp
Labs/AiSD/3_StackQueue/: .~lock.2СтекОчДек1.rtf#  .~lock.Larin_Anton_AiSD_21_3 (copy).odt#  .~lock.Larin_Anton_AiSD_21_3.odt#  Larin_Anton_AiSD_21_3 (copy).odt  Larin_Anton_AiSD_21_3.odt  К
Labs/AiSD/3_StackQueue/Code/: a.out  in  main2.cpp  st_interf2.h
Labs/AiSD/3_StackQueue/Можно использовать в 3-ей работе/3/: main3.cpp
Labs/AiSD/4_Tree/: .~lock.АиСД деревья.doc#  Larin_Anton_AiSD_21_4.odt  k  Лекция 05 1 Деревья.7z  Программы к лекции (бин дер).rar
Labs/AiSD/4_Tree/Code/: Btree_.h  CMakeLists.txt  KLP.txt  a.out  in  work_bt.cpp
Labs/AiSD/4_Tree/Code (copy)/: Btree_.h
Labs/AiSD/4_Tree/Программы к лекции (бин дер)/: bt_implementation.cpp
Labs/AiSD/5_/: .~lock.5-я лаб. и курсовая работа АиСД.doc#  .~lock.Larin_Anton_AiSD_21_5.doc#  Larin_Anton_AiSD_21_5.doc
Labs/AiSD/5_/Code/: AVLTreeClass.h  CMakeLists.txt  main.cpp
Labs/AiSD/5_/Code (copy)/: AVLTreeClass.h  CMakeLists.txt  a.out  in  main.cpp  out
Labs/AiSD/CW/: Latin_Anton_AiSD_21_KW.doc
Labs/AiSD/CourseWork/: AVLTreeClass.h  CourseWork  CourseWork.pro  Makefile  _qbmptools - копия.cpp  drawgraphicsview.cpp  graph_window.cpp  graph_window.h  graphgraphicview.cpp  graphgraphicview.h  info_dialog.cpp  line_dialog.h  listviewactionlogger.cpp  listviewactionlogger.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_avlogger.cpp  moc_create_dialog.cpp  moc_drawgraphicsview.cpp  moc_graphgraphicview.cpp  moc_info_dialog.cpp  moc_mainwindow.cpp  moc_qbmptools.cpp  moc_triangle_dialog.cpp  mygraphicview.cpp  rot_dialog.cpp  triangle_dialog.cpp  ui__mainwindow.h  ui_mainwindow.h
Labs/AiSD/CourseWork/debug/: moc_line_dialog.cpp  moc_rgb_component.cpp  moc_rot_dialog.cpp
Labs/AiSD/Lections/: БДП СОРТ_послать студентам.doc  Л 10 Дерамиды.ppt  Л 9_1 БДП.ppt  Л 9_2 Случайные БДП.ppt  Лекция 08 Деревья Хаффмана Динамич кодир2016.ppt  Лекция 12_2016  Хеширование.pptx  Лекция 13 Самост.ppt  Лекция 14(qSort).ppt  Лекция 16_1.ppt  Лекция 16_2  Медиана.ppt
Labs/AiSD/Lections/2 0  Пособие Деревья Кодирования и Поиска (дер Хаф)/: .~lock.1_1ДХафф.doc#  1_2_3_ДХафф.doc  1_5_ДХафф.doc  1_8ДХафф.doc  1_9продолжАБРАКАДАБРА.doc
Labs/AiSD/Lections/посылка по Лекция 7 - 19.10.2015/: 1 Указания к Л7.docx  3 Карл и Клара.doc
Labs/s2/OOP/OOProject/: Ability.h  CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Mediator.cpp  Mediator.h  Mobility.h  Stats.h  Vitality.cpp  Vitality.h  main.cpp
Labs/s2/OOP/OOProject/Actor/: AI.cpp  AI.h
Labs/s2/OOP/OOProject/Entity/: Entity.cpp  Entity.h
Labs/s2/OOP/OOProject/Exeptions/: AttemptToSetNeutralBaseException.h  BaseNotSetException.h  MediatorNotSetException.h
Labs/s2/OOP/OOProject/Facade/: IFacade.h
Labs/s2/OOP/OOProject/Factory/: AbstractFactory.cpp  AbstractFactory.h  CommonFactory.cpp  CommonFactory.h
Labs/s2/OOP/OOProject/GameObject/: GameObject.h
Labs/s2/OOP/OOProject/Terrain/: HollyTerrain.cpp  HollyTerrain.h  SpikyTerrain.cpp  SpikyTerrain.h  SteepTerrain.cpp  SteepTerrain.h  Terrain.cpp  Terrain.h  TerrainProxy.cpp  TerrainProxy.h
Labs/s2/OOP/OOProject/Unit/: TheAgile.cpp  TheMarathoner.cpp  ThePowerful.cpp  TheRanger.cpp  TheTough.cpp  (+3 more)
Labs/s2/OOP/Proj/: Base.cpp  Base.h  CMakeLists.txt  Facade.cpp  Facade.h  Field.cpp  Field.h  FieldCellProxy.cpp  FieldCellProxy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectList.cpp  GameObjectList.h  LandscapeProxy.cpp  LandscapeProxy.h  Mediator.cpp  Mediator.h  UnitFactory.cpp  UnitFactory.h  Vector.h  main.cpp
(+17714 files in other folders)
